--- a/8-Model-evaluation.qmd
+++ b/8-Model-evaluation.qmd
@@ -73,15 +73,13 @@ This structure may feel familiar, it mirrors the concept of *Type I and Type II 
 With the confusion matrix in hand, we can compute basic performance metrics. Two of the most general are *accuracy* and *error rate*.
 
 *Accuracy* (also called success rate) measures the proportion of correct predictions:
-
 $$
-\text{Accuracy} = \frac{\text{TP} + \text{TN}}{\text{Total Predictions}} = \frac{\text{TP} + \text{TN}}{\text{TP} + \text{FP} + \text{FN} + \text{TN}}
+\text{Accuracy} = \frac{\text{TP} + \text{TN}}{\text{Total Predictions}} = \frac{\text{TP} + \text{TN}}{\text{TP} + \text{FP} + \text{FN} + \text{TN}}.
 $$
 
 *Error rate* is the proportion of incorrect predictions:
-
 $$
-\text{Error Rate} = 1 - \text{Accuracy} = \frac{\text{FP} + \text{FN}}{\text{Total Predictions}}
+\text{Error Rate} = 1 - \text{Accuracy} = \frac{\text{FP} + \text{FN}}{\text{Total Predictions}}.
 $$
 
 These metrics offer a broad summary of model performance. However, they can be misleading. Imagine a dataset in which only 5% of transactions are fraudulent. A model that labels all transactions as legitimate would still achieve 95% accuracy, yet completely fail to detect fraud. This illustrates a classic case where accuracy hides deeper weaknesses, especially in imbalanced datasets.
@@ -134,18 +132,14 @@ We can also visualize the confusion matrix:
 conf.mat.plot(pred = kNN_predict, actual = test_labels)
 ```
 
-This plot provides a clear visual summary of prediction outcomes.
-
-Next, we compute the accuracy and error rate:
-
+This plot provides a clear visual summary of prediction outcomes. Next, we compute the accuracy and error rate:
 $$
-\text{Accuracy} = \frac{`r conf_max_knn_churn[1, 1]` + `r conf_max_knn_churn[2, 2]`}{`r sum(conf_max_knn_churn)`} = `r round((conf_max_knn_churn[1, 1] + conf_max_knn_churn[2, 2]) / sum(conf_max_knn_churn), 3)`
+\text{Accuracy} = \frac{`r conf_max_knn_churn[1, 1]` + `r conf_max_knn_churn[2, 2]`}{`r sum(conf_max_knn_churn)`} = `r round((conf_max_knn_churn[1, 1] + conf_max_knn_churn[2, 2]) / sum(conf_max_knn_churn), 3)`,
 $$
 
 $$
-\text{Error Rate} = \frac{`r conf_max_knn_churn[2, 1]` + `r conf_max_knn_churn[1, 2]`}{`r sum(conf_max_knn_churn)`} = `r round((conf_max_knn_churn[2, 1] + conf_max_knn_churn[1, 2]) / sum(conf_max_knn_churn), 3)`
+\text{Error Rate} = \frac{`r conf_max_knn_churn[2, 1]` + `r conf_max_knn_churn[1, 2]`}{`r sum(conf_max_knn_churn)`} = `r round((conf_max_knn_churn[2, 1] + conf_max_knn_churn[1, 2]) / sum(conf_max_knn_churn), 3)`.
 $$
-
 Thus, the model correctly classified `r round((conf_max_knn_churn[1, 1] + conf_max_knn_churn[2, 2]) / sum(conf_max_knn_churn), 3) * 100`% of cases, while `r round((conf_max_knn_churn[2, 1] + conf_max_knn_churn[1, 2]) / sum(conf_max_knn_churn), 3) * 100`% were misclassified.
 
 Having reviewed accuracy and error rate, we next turn to additional evaluation metrics that provide more insight into a model’s strengths and limitations, particularly in imbalanced or high-stakes classification settings. The next section introduces *sensitivity*, *specificity*, *precision*, and *recall*.
@@ -163,15 +157,13 @@ These metrics allow us to examine the model's strengths and weaknesses more crit
 How good is your model at *catching the cases that matter most*? That is the question sensitivity helps answer. *Sensitivity*, also known as *recall* in fields like information retrieval, measures a model’s ability to correctly identify *positive cases*. In other words, it answers: *Out of all the actual positives, how many did the model correctly predict?*
 
 This matters most in situations where missing a positive case has serious consequences, such as failing to detect fraud or disease. The formula for sensitivity is:
-
 $$
-\text{Sensitivity} = \frac{\text{True Positives (TP)}}{\text{True Positives (TP)} + \text{False Negatives (FN)}}
+\text{Sensitivity} = \frac{\text{True Positives (TP)}}{\text{True Positives (TP)} + \text{False Negatives (FN)}}.
 $$
 
 Let us apply this to the kNN model from Chapter [-@sec-ch7-classification-knn], where we predicted customer churn (`churn = yes`). Sensitivity tells us the percentage of customers who actually left, and were correctly flagged by the model. Using the confusion matrix from the previous section, we have:
-
 $$
-\text{Sensitivity} = \frac{\text{TP}}{\text{TP} + \text{FN}} = \frac{`r conf_max_knn_churn[1, 1]`}{`r conf_max_knn_churn[1, 1]` + `r conf_max_knn_churn[1, 2]`} = `r round(conf_max_knn_churn[1, 1] / (conf_max_knn_churn[1, 1] + conf_max_knn_churn[1, 2]), 3)`
+\text{Sensitivity} = \frac{\text{TP}}{\text{TP} + \text{FN}} = \frac{`r conf_max_knn_churn[1, 1]`}{`r conf_max_knn_churn[1, 1]` + `r conf_max_knn_churn[1, 2]`} = `r round(conf_max_knn_churn[1, 1] / (conf_max_knn_churn[1, 1] + conf_max_knn_churn[1, 2]), 3)`.
 $$
 
 This means the model correctly identified `r round(conf_max_knn_churn[1, 1] / (conf_max_knn_churn[1, 1] + conf_max_knn_churn[1, 2]), 3) * 100`% of actual churners.
@@ -183,19 +175,16 @@ Note that a model with *100% sensitivity* flags *every single* positive case. Bu
 If sensitivity tells us how well a model *catches the positive cases*, specificity tells us how well it *avoids false alarms*. *Specificity* measures the model’s ability to correctly identify *negative cases*. It answers the question: *Out of all the actual negatives, how many did the model correctly predict?*
 
 This becomes crucial when false positives are costly. Think of spam filters: marking a legitimate email as spam (a false positive) might cause users to miss important messages. In such cases, high specificity is essential. The formula for specificity is:
-
 $$
-\text{Specificity} = \frac{\text{True Negatives (TN)}}{\text{True Negatives (TN)} + \text{False Positives (FP)}}
+\text{Specificity} = \frac{\text{True Negatives (TN)}}{\text{True Negatives (TN)} + \text{False Positives (FP)}}.
 $$
 
 Let us return to the kNN model from Chapter [-@sec-ch7-classification-knn], where we predicted customer churn. Specificity in this case tells us how well the model identified customers who *did not churn*.
 
 Using the confusion matrix from the previous section, we can compute specificity as follows:
-
 $$
-\text{Specificity} = \frac{\text{TN}}{\text{TN} + \text{FP}} = \frac{`r conf_max_knn_churn[2, 2]`}{`r conf_max_knn_churn[2, 2]` + `r conf_max_knn_churn[2, 1]`} = `r round(conf_max_knn_churn[2, 2] / (conf_max_knn_churn[2, 2] + conf_max_knn_churn[2, 1]), 3)`
+\text{Specificity} = \frac{\text{TN}}{\text{TN} + \text{FP}} = \frac{`r conf_max_knn_churn[2, 2]`}{`r conf_max_knn_churn[2, 2]` + `r conf_max_knn_churn[2, 1]`} = `r round(conf_max_knn_churn[2, 2] / (conf_max_knn_churn[2, 2] + conf_max_knn_churn[2, 1]), 3)`.
 $$
-
 This means the model correctly identified `r round(conf_max_knn_churn[2, 2] / (conf_max_knn_churn[2, 2] + conf_max_knn_churn[2, 1]), 3) * 100`% of the customers who stayed.
 
 While each metric is valuable on its own, in practice, we often want *high sensitivity and high specificity*. But boosting one can sometimes lower the other. The right balance depends on your application. For the kNN model in the previous section, sensitivity is `r round(conf_max_knn_churn[1, 1] / (conf_max_knn_churn[1, 1] + conf_max_knn_churn[1, 2]), 3)`, while specificity is `r round(conf_max_knn_churn[2, 2] / (conf_max_knn_churn[2, 2] + conf_max_knn_churn[2, 1]), 3)`. This trade-off may be acceptable in this context, as identifying churners (sensitivity) is often more important than minimizing false positives (specificity).
@@ -221,57 +210,45 @@ In addition to sensitivity and specificity, the metrics of *Precision*, *recall*
 *Precision*, also referred to as the *positive predictive value*, measures how many of the predicted positives are actually positive. It answers the question: *When the model predicts a positive case, how often is it correct?*
 
 This is formally defined as:
-
 $$
-\text{Precision} = \frac{\text{TP}}{\text{TP} + \text{FP}}
+\text{Precision} = \frac{\text{TP}}{\text{TP} + \text{FP}}.
 $$
-
 Precision becomes particularly important in applications where false positives are costly. In fraud detection, for example, incorrectly flagging legitimate transactions can inconvenience customers and require unnecessary investigation.
 
 *Recall*, which is equivalent to sensitivity, measures the model’s ability to identify all actual positive cases. It addresses the question: *Out of all the actual positives, how many did the model correctly identify?*
 
 The formula for recall is:
-
 $$
-\text{Recall} = \frac{\text{TP}}{\text{TP} + \text{FN}}
+\text{Recall} = \frac{\text{TP}}{\text{TP} + \text{FN}}.
 $$
-
 Recall is crucial in settings where missing a positive case has serious consequences, such as medical diagnosis or fraud detection. Recall is synonymous with sensitivity; both measure how many actual positives are correctly identified. While the term sensitivity is common in biomedical contexts, recall is often used in fields like information retrieval and text classification.
 
 There is typically a trade-off between precision and recall. Increasing precision makes the model more conservative in predicting positives, which reduces false positives but may also miss true positives, resulting in lower recall. Conversely, increasing recall ensures more positive cases are captured, but often at the cost of a higher false positive rate, thus lowering precision. For instance, in cancer screening, maximizing recall ensures no cases are missed, even if some healthy patients are falsely flagged. In contrast, in email spam detection, a high precision is desirable to avoid misclassifying legitimate emails as spam.
 
 To quantify this trade-off, the *F1-score* combines precision and recall into a single metric. It is the harmonic mean of the two:
-
 $$
-F1 = 2 \times \frac{\text{Precision} \times \text{Recall}}{\text{Precision} + \text{Recall}} = \frac{2 \times \text{TP}}{2 \times \text{TP} + \text{FP} + \text{FN}}
+F1 = 2 \times \frac{\text{Precision} \times \text{Recall}}{\text{Precision} + \text{Recall}} = \frac{2 \times \text{TP}}{2 \times \text{TP} + \text{FP} + \text{FN}}.
 $$
-
 The F1-score is particularly valuable when dealing with imbalanced datasets. Unlike accuracy, it accounts for both false positives and false negatives, offering a more balanced evaluation.
 
 Let us now compute these metrics using the kNN model in [Section -@sec-ch8-confusion-matrix], which predicts whether a customer will churn (`churn = yes`).
 
 *Precision* measures how often the model’s churn predictions are correct:
-
 $$
-\text{Precision} = \frac{\text{TP}}{\text{TP} + \text{FP}} = \frac{`r conf_max_knn_churn[1, 1]`}{`r conf_max_knn_churn[1, 1]` + `r conf_max_knn_churn[2, 1]`} = `r round(conf_max_knn_churn[1, 1] / (conf_max_knn_churn[1, 1] + conf_max_knn_churn[2, 1]), 3)`
+\text{Precision} = \frac{\text{TP}}{\text{TP} + \text{FP}} = \frac{`r conf_max_knn_churn[1, 1]`}{`r conf_max_knn_churn[1, 1]` + `r conf_max_knn_churn[2, 1]`} = `r round(conf_max_knn_churn[1, 1] / (conf_max_knn_churn[1, 1] + conf_max_knn_churn[2, 1]), 3)`.
 $$
-
 This indicates that the model’s predictions of churn are correct in `r round(conf_max_knn_churn[1, 1] / (conf_max_knn_churn[1, 1] + conf_max_knn_churn[2, 1]), 3) * 100`% of cases.
 
 *recall* (or sensitivity) reflects how many actual churners were correctly identified:
-
 $$
-\text{Recall} = \frac{\text{TP}}{\text{TP} + \text{FN}} = \frac{`r conf_max_knn_churn[1, 1]`}{`r conf_max_knn_churn[1, 1]` + `r conf_max_knn_churn[1, 2]`} = `r round(conf_max_knn_churn[1, 1] / (conf_max_knn_churn[1, 1] + conf_max_knn_churn[1, 2]), 3)`
+\text{Recall} = \frac{\text{TP}}{\text{TP} + \text{FN}} = \frac{`r conf_max_knn_churn[1, 1]`}{`r conf_max_knn_churn[1, 1]` + `r conf_max_knn_churn[1, 2]`} = `r round(conf_max_knn_churn[1, 1] / (conf_max_knn_churn[1, 1] + conf_max_knn_churn[1, 2]), 3)`.
 $$
-
 The model thus successfully identifies `r round(conf_max_knn_churn[1, 1] / (conf_max_knn_churn[1, 1] + conf_max_knn_churn[1, 2]), 3) * 100`% of churners.
 
 *F1-score* combines these into a single measure:
-
 $$
-F1 = \frac{2 \times `r conf_max_knn_churn[1, 1]`}{2 \times `r conf_max_knn_churn[1, 1]` + `r conf_max_knn_churn[2, 1]` + `r conf_max_knn_churn[1, 2]`} = `r round(2 * conf_max_knn_churn[1, 1] / (2 * conf_max_knn_churn[1, 1] + conf_max_knn_churn[2, 1] + conf_max_knn_churn[1, 2]), 3)`
+F1 = \frac{2 \times `r conf_max_knn_churn[1, 1]`}{2 \times `r conf_max_knn_churn[1, 1]` + `r conf_max_knn_churn[2, 1]` + `r conf_max_knn_churn[1, 2]`} = `r round(2 * conf_max_knn_churn[1, 1] / (2 * conf_max_knn_churn[1, 1] + conf_max_knn_churn[2, 1] + conf_max_knn_churn[1, 2]), 3)`.
 $$
-
 This score summarizes the model’s ability to correctly identify churners while balancing the cost of false predictions.
 
 The F1-score is a valuable metric when precision and recall are both important. However, in practice, their relative importance depends on the context. In healthcare, recall might be prioritized to avoid missing true cases. In contrast, in filtering systems like spam detection, precision may be more important to avoid misclassifying valid items.
@@ -376,24 +353,18 @@ While the ROC curve provides a visual summary of a model’s classification perf
 
 ## Area Under the Curve (AUC)
 
-While the ROC curve provides a visual summary of a model’s performance across all thresholds, it is often useful to quantify this performance with a single number. The *AUC* serves this purpose. It measures how well the model ranks positive cases higher than negative ones, independent of any particular threshold.
-
-Mathematically, AUC is defined as:
-
+While the ROC curve provides a visual summary of a model’s performance across all thresholds, it is often useful to quantify this performance with a single number. The *AUC* serves this purpose. It measures how well the model ranks positive cases higher than negative ones, independent of any particular threshold. Mathematically, AUC is defined as:
 $$
-\text{AUC} = \int_{0}^{1} \text{TPR}(t) \, d\text{FPR}(t)
+\text{AUC} = \int_{0}^{1} \text{TPR}(t) \, d\text{FPR}(t),
 $$
-
 where $t$ denotes the classification threshold. A larger AUC value indicates better discrimination between the positive and negative classes across all possible thresholds.
 
 ```{r fig-ch8-auc, echo = FALSE, out.width = "45%", fig.cap = "The AUC summarizes the ROC curve into a single number, representing the model’s ability to rank positive cases higher than negative ones. AUC = 1: Perfect model. AUC = 0.5: No better than random guessing."}
 knitr::include_graphics("images/ch8_auc.png")
 ```
-
-As shown in @fig-ch8-auc, the AUC ranges from 0 to 1. A value of 1 indicates a perfect model, 0.5 corresponds to random guessing, and values between 0.5 and 1 reflect varying degrees of predictive power.
+As shown in @fig-ch8-auc, the AUC ranges from 0 to 1. A value of 1 indicates a perfect model, 0.5 corresponds to random guessing, and values between 0.5 and 1 reflect varying degrees of predictive power. Although uncommon, an AUC lower than 0.5 can occur when the model systematically predicts the opposite of the true class— for example, when the positive and negative labels are reversed, or when the predicted probabilities are inverted. In such cases, the model’s ranking ability is effectively reversed, and simply swapping the class labels (or using $1 - p$) would yield an AUC above 0.5.
 
 To compute the AUC in R, we use the `auc()` function from the **pROC** package. This function takes an ROC object, such as the one created earlier using `roc()`, and returns a numeric value:
-
 ```{r}
 auc(roc_knn)
 ```
@@ -439,27 +410,21 @@ In the next section, we turn to cases such as regression models, where the targe
 Suppose you want to predict a house’s selling price, a patient’s recovery time, or tomorrow’s temperature. These are examples of *regression problems*, where the target variable is numerical rather than categorical (see Chapter [-@sec-ch10-regression]). In such cases, classification metrics do not apply. Instead, evaluation metrics tailored to numerical outcomes are used to assess predictive accuracy.
 
 One commonly used metric is the *Mean Squared Error (MSE)*:
-
 $$
-\text{MSE} = \frac{1}{n} \sum_{i=1}^{n} (y_i - \hat{y}_i)^2
+\text{MSE} = \frac{1}{n} \sum_{i=1}^{n} (y_i - \hat{y}_i)^2.
 $$
-
 Here, $y_i$ is the actual value, $\hat{y}_i$ is the predicted value, and $n$ is the number of observations. MSE computes the average of the squared differences between predicted and observed values. Since squaring exaggerates larger errors, MSE is especially sensitive to outliers. Smaller values indicate better predictive accuracy, with zero representing a perfect model.
 
 Another important metric is the *Mean Absolute Error (MAE)*:
-
 $$
-\text{MAE} = \frac{1}{n} \sum_{i=1}^{n} |y_i - \hat{y}_i|
+\text{MAE} = \frac{1}{n} \sum_{i=1}^{n} |y_i - \hat{y}_i|.
 $$
-
 MAE calculates the average absolute difference between predictions and actual outcomes. Unlike MSE, all errors contribute equally, making MAE more robust to extreme values and easier to interpret. This is especially useful when the data contain outliers or when interpretability is a priority.
 
 A third key metric is the *coefficient of determination*, or $R^2$:
-
 $$
-R^2 = 1 - \frac{\sum (y_i - \hat{y}_i)^2}{\sum (y_i - \bar{y})^2}
+R^2 = 1 - \frac{\sum (y_i - \hat{y}_i)^2}{\sum (y_i - \bar{y})^2},
 $$
-
 where $\bar{y}$ is the mean of the actual values. The $R^2$ score measures the proportion of variance in the outcome that is explained by the model. A value of $R^2 = 1$ indicates a perfect fit, while $R^2 = 0$ means the model performs no better than predicting the mean for every observation.
 
 Each of these metrics captures a different aspect of model performance:
