--- a/Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions.tex
+++ b/Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions.tex
@@ -12760,16 +12760,12 @@ metrics. Two of the most general are \emph{accuracy} and \emph{error
 rate}.
 
 \emph{Accuracy} (also called success rate) measures the proportion of
-correct predictions:
-
-\[
-\text{Accuracy} = \frac{\text{TP} + \text{TN}}{\text{Total Predictions}} = \frac{\text{TP} + \text{TN}}{\text{TP} + \text{FP} + \text{FN} + \text{TN}}
+correct predictions: \[
+\text{Accuracy} = \frac{\text{TP} + \text{TN}}{\text{Total Predictions}} = \frac{\text{TP} + \text{TN}}{\text{TP} + \text{FP} + \text{FN} + \text{TN}}.
 \]
 
-\emph{Error rate} is the proportion of incorrect predictions:
-
-\[
-\text{Error Rate} = 1 - \text{Accuracy} = \frac{\text{FP} + \text{FN}}{\text{Total Predictions}}
+\emph{Error rate} is the proportion of incorrect predictions: \[
+\text{Error Rate} = 1 - \text{Accuracy} = \frac{\text{FP} + \text{FN}}{\text{Total Predictions}}.
 \]
 
 These metrics offer a broad summary of model performance. However, they
@@ -12864,20 +12860,15 @@ We can also visualize the confusion matrix:
 \includegraphics[width=0.3\linewidth,height=\textheight,keepaspectratio]{8-Model-evaluation_files/figure-pdf/unnamed-chunk-5-1.pdf}
 \end{center}
 
-This plot provides a clear visual summary of prediction outcomes.
-
-Next, we compute the accuracy and error rate:
-
-\[
-\text{Accuracy} = \frac{49 + 849}{1000} = 0.898
+This plot provides a clear visual summary of prediction outcomes. Next,
+we compute the accuracy and error rate: \[
+\text{Accuracy} = \frac{49 + 849}{1000} = 0.898,
 \]
 
 \[
-\text{Error Rate} = \frac{6 + 96}{1000} = 0.102
-\]
-
-Thus, the model correctly classified 89.8\% of cases, while 10.2\% were
-misclassified.
+\text{Error Rate} = \frac{6 + 96}{1000} = 0.102.
+\] Thus, the model correctly classified 89.8\% of cases, while 10.2\%
+were misclassified.
 
 Having reviewed accuracy and error rate, we next turn to additional
 evaluation metrics that provide more insight into a model's strengths
@@ -12919,20 +12910,16 @@ the model correctly predict?}
 
 This matters most in situations where missing a positive case has
 serious consequences, such as failing to detect fraud or disease. The
-formula for sensitivity is:
-
-\[
-\text{Sensitivity} = \frac{\text{True Positives (TP)}}{\text{True Positives (TP)} + \text{False Negatives (FN)}}
+formula for sensitivity is: \[
+\text{Sensitivity} = \frac{\text{True Positives (TP)}}{\text{True Positives (TP)} + \text{False Negatives (FN)}}.
 \]
 
 Let us apply this to the kNN model from Chapter
 \ref{sec-ch7-classification-knn}, where we predicted customer churn
 (\texttt{churn\ =\ yes}). Sensitivity tells us the percentage of
 customers who actually left, and were correctly flagged by the model.
-Using the confusion matrix from the previous section, we have:
-
-\[
-\text{Sensitivity} = \frac{\text{TP}}{\text{TP} + \text{FN}} = \frac{49}{49 + 96} = 0.338
+Using the confusion matrix from the previous section, we have: \[
+\text{Sensitivity} = \frac{\text{TP}}{\text{TP} + \text{FN}} = \frac{49}{49 + 96} = 0.338.
 \]
 
 This means the model correctly identified 33.8\% of actual churners.
@@ -12954,10 +12941,8 @@ actual negatives, how many did the model correctly predict?}
 This becomes crucial when false positives are costly. Think of spam
 filters: marking a legitimate email as spam (a false positive) might
 cause users to miss important messages. In such cases, high specificity
-is essential. The formula for specificity is:
-
-\[
-\text{Specificity} = \frac{\text{True Negatives (TN)}}{\text{True Negatives (TN)} + \text{False Positives (FP)}}
+is essential. The formula for specificity is: \[
+\text{Specificity} = \frac{\text{True Negatives (TN)}}{\text{True Negatives (TN)} + \text{False Positives (FP)}}.
 \]
 
 Let us return to the kNN model from Chapter
@@ -12966,13 +12951,9 @@ Specificity in this case tells us how well the model identified
 customers who \emph{did not churn}.
 
 Using the confusion matrix from the previous section, we can compute
-specificity as follows:
-
-\[
-\text{Specificity} = \frac{\text{TN}}{\text{TN} + \text{FP}} = \frac{849}{849 + 6} = 0.993
-\]
-
-This means the model correctly identified 99.3\% of the customers who
+specificity as follows: \[
+\text{Specificity} = \frac{\text{TN}}{\text{TN} + \text{FP}} = \frac{849}{849 + 6} = 0.993.
+\] This means the model correctly identified 99.3\% of the customers who
 stayed.
 
 While each metric is valuable on its own, in practice, we often want
@@ -13041,13 +13022,9 @@ value}, measures how many of the predicted positives are actually
 positive. It answers the question: \emph{When the model predicts a
 positive case, how often is it correct?}
 
-This is formally defined as:
-
-\[
-\text{Precision} = \frac{\text{TP}}{\text{TP} + \text{FP}}
-\]
-
-Precision becomes particularly important in applications where false
+This is formally defined as: \[
+\text{Precision} = \frac{\text{TP}}{\text{TP} + \text{FP}}.
+\] Precision becomes particularly important in applications where false
 positives are costly. In fraud detection, for example, incorrectly
 flagging legitimate transactions can inconvenience customers and require
 unnecessary investigation.
@@ -13057,18 +13034,14 @@ ability to identify all actual positive cases. It addresses the
 question: \emph{Out of all the actual positives, how many did the model
 correctly identify?}
 
-The formula for recall is:
-
-\[
-\text{Recall} = \frac{\text{TP}}{\text{TP} + \text{FN}}
-\]
-
-Recall is crucial in settings where missing a positive case has serious
-consequences, such as medical diagnosis or fraud detection. Recall is
-synonymous with sensitivity; both measure how many actual positives are
-correctly identified. While the term sensitivity is common in biomedical
-contexts, recall is often used in fields like information retrieval and
-text classification.
+The formula for recall is: \[
+\text{Recall} = \frac{\text{TP}}{\text{TP} + \text{FN}}.
+\] Recall is crucial in settings where missing a positive case has
+serious consequences, such as medical diagnosis or fraud detection.
+Recall is synonymous with sensitivity; both measure how many actual
+positives are correctly identified. While the term sensitivity is common
+in biomedical contexts, recall is often used in fields like information
+retrieval and text classification.
 
 There is typically a trade-off between precision and recall. Increasing
 precision makes the model more conservative in predicting positives,
@@ -13082,13 +13055,9 @@ detection, a high precision is desirable to avoid misclassifying
 legitimate emails as spam.
 
 To quantify this trade-off, the \emph{F1-score} combines precision and
-recall into a single metric. It is the harmonic mean of the two:
-
-\[
-F1 = 2 \times \frac{\text{Precision} \times \text{Recall}}{\text{Precision} + \text{Recall}} = \frac{2 \times \text{TP}}{2 \times \text{TP} + \text{FP} + \text{FN}}
-\]
-
-The F1-score is particularly valuable when dealing with imbalanced
+recall into a single metric. It is the harmonic mean of the two: \[
+F1 = 2 \times \frac{\text{Precision} \times \text{Recall}}{\text{Precision} + \text{Recall}} = \frac{2 \times \text{TP}}{2 \times \text{TP} + \text{FP} + \text{FN}}.
+\] The F1-score is particularly valuable when dealing with imbalanced
 datasets. Unlike accuracy, it accounts for both false positives and
 false negatives, offering a more balanced evaluation.
 
@@ -13097,32 +13066,20 @@ Section~\ref{sec-ch8-confusion-matrix}, which predicts whether a
 customer will churn (\texttt{churn\ =\ yes}).
 
 \emph{Precision} measures how often the model's churn predictions are
-correct:
-
-\[
-\text{Precision} = \frac{\text{TP}}{\text{TP} + \text{FP}} = \frac{49}{49 + 6} = 0.891
-\]
-
-This indicates that the model's predictions of churn are correct in
+correct: \[
+\text{Precision} = \frac{\text{TP}}{\text{TP} + \text{FP}} = \frac{49}{49 + 6} = 0.891.
+\] This indicates that the model's predictions of churn are correct in
 89.1\% of cases.
 
 \emph{recall} (or sensitivity) reflects how many actual churners were
-correctly identified:
+correctly identified: \[
+\text{Recall} = \frac{\text{TP}}{\text{TP} + \text{FN}} = \frac{49}{49 + 96} = 0.338.
+\] The model thus successfully identifies 33.8\% of churners.
 
-\[
-\text{Recall} = \frac{\text{TP}}{\text{TP} + \text{FN}} = \frac{49}{49 + 96} = 0.338
-\]
-
-The model thus successfully identifies 33.8\% of churners.
-
-\emph{F1-score} combines these into a single measure:
-
-\[
-F1 = \frac{2 \times 49}{2 \times 49 + 6 + 96} = 0.49
-\]
-
-This score summarizes the model's ability to correctly identify churners
-while balancing the cost of false predictions.
+\emph{F1-score} combines these into a single measure: \[
+F1 = \frac{2 \times 49}{2 \times 49 + 6 + 96} = 0.49.
+\] This score summarizes the model's ability to correctly identify
+churners while balancing the cost of false predictions.
 
 The F1-score is a valuable metric when precision and recall are both
 important. However, in practice, their relative importance depends on
@@ -13404,15 +13361,10 @@ While the ROC curve provides a visual summary of a model's performance
 across all thresholds, it is often useful to quantify this performance
 with a single number. The \emph{AUC} serves this purpose. It measures
 how well the model ranks positive cases higher than negative ones,
-independent of any particular threshold.
-
-Mathematically, AUC is defined as:
-
-\[
-\text{AUC} = \int_{0}^{1} \text{TPR}(t) \, d\text{FPR}(t)
-\]
-
-where \(t\) denotes the classification threshold. A larger AUC value
+independent of any particular threshold. Mathematically, AUC is defined
+as: \[
+\text{AUC} = \int_{0}^{1} \text{TPR}(t) \, d\text{FPR}(t),
+\] where \(t\) denotes the classification threshold. A larger AUC value
 indicates better discrimination between the positive and negative
 classes across all possible thresholds.
 
@@ -13434,7 +13386,12 @@ than random guessing.}
 As shown in Figure~\ref{fig-ch8-auc}, the AUC ranges from 0 to 1. A
 value of 1 indicates a perfect model, 0.5 corresponds to random
 guessing, and values between 0.5 and 1 reflect varying degrees of
-predictive power.
+predictive power. Although uncommon, an AUC lower than 0.5 can occur
+when the model systematically predicts the opposite of the true class---
+for example, when the positive and negative labels are reversed, or when
+the predicted probabilities are inverted. In such cases, the model's
+ranking ability is effectively reversed, and simply swapping the class
+labels (or using \(1 - p\)) would yield an AUC above 0.5.
 
 To compute the AUC in R, we use the \texttt{auc()} function from the
 \textbf{pROC} package. This function takes an ROC object, such as the
@@ -13566,39 +13523,27 @@ rather than categorical (see Chapter \ref{sec-ch10-regression}). In such
 cases, classification metrics do not apply. Instead, evaluation metrics
 tailored to numerical outcomes are used to assess predictive accuracy.
 
-One commonly used metric is the \emph{Mean Squared Error (MSE)}:
-
-\[
-\text{MSE} = \frac{1}{n} \sum_{i=1}^{n} (y_i - \hat{y}_i)^2
-\]
-
-Here, \(y_i\) is the actual value, \(\hat{y}_i\) is the predicted value,
-and \(n\) is the number of observations. MSE computes the average of the
-squared differences between predicted and observed values. Since
+One commonly used metric is the \emph{Mean Squared Error (MSE)}: \[
+\text{MSE} = \frac{1}{n} \sum_{i=1}^{n} (y_i - \hat{y}_i)^2.
+\] Here, \(y_i\) is the actual value, \(\hat{y}_i\) is the predicted
+value, and \(n\) is the number of observations. MSE computes the average
+of the squared differences between predicted and observed values. Since
 squaring exaggerates larger errors, MSE is especially sensitive to
 outliers. Smaller values indicate better predictive accuracy, with zero
 representing a perfect model.
 
-Another important metric is the \emph{Mean Absolute Error (MAE)}:
-
-\[
-\text{MAE} = \frac{1}{n} \sum_{i=1}^{n} |y_i - \hat{y}_i|
-\]
-
-MAE calculates the average absolute difference between predictions and
-actual outcomes. Unlike MSE, all errors contribute equally, making MAE
-more robust to extreme values and easier to interpret. This is
+Another important metric is the \emph{Mean Absolute Error (MAE)}: \[
+\text{MAE} = \frac{1}{n} \sum_{i=1}^{n} |y_i - \hat{y}_i|.
+\] MAE calculates the average absolute difference between predictions
+and actual outcomes. Unlike MSE, all errors contribute equally, making
+MAE more robust to extreme values and easier to interpret. This is
 especially useful when the data contain outliers or when
 interpretability is a priority.
 
 A third key metric is the \emph{coefficient of determination}, or
-\(R^2\):
-
-\[
-R^2 = 1 - \frac{\sum (y_i - \hat{y}_i)^2}{\sum (y_i - \bar{y})^2}
-\]
-
-where \(\bar{y}\) is the mean of the actual values. The \(R^2\) score
+\(R^2\): \[
+R^2 = 1 - \frac{\sum (y_i - \hat{y}_i)^2}{\sum (y_i - \bar{y})^2},
+\] where \(\bar{y}\) is the mean of the actual values. The \(R^2\) score
 measures the proportion of variance in the outcome that is explained by
 the model. A value of \(R^2 = 1\) indicates a perfect fit, while
 \(R^2 = 0\) means the model performs no better than predicting the mean
