--- a/1-Intro-R.qmd
+++ b/1-Intro-R.qmd
@@ -56,7 +56,9 @@ Regardless of the path you take, the most effective strategy is regular, deliber
 
 This mindset is well captured by James Clear’s concept of *The Power of Tiny Gains*, popularized in *Atomic Habits*: a 1% improvement each day may seem small, but it compounds into remarkable progress over time. [Figure @fig-ch1-tiny-gains], created entirely in R, illustrates this idea, and previews what you will soon be able to do: write code that explores ideas, generates plots, and communicates insights clearly and reproducibly.
 
-```{r fig-ch1-tiny-gains, echo = FALSE, out.width  = '70%'}
+```{r fig-ch1-tiny-gains, echo = FALSE, out.width = '100%'}
+#| fig-width: 7
+#| fig-height: 3.5
 #| fig-cap: "The Power of Tiny Gains: A 1% improvement every day leads to exponential growth over time. This plot was created entirely in R."
 
 x <- 0:365
