--- a/4-Exploratory-data-analysis.qmd
+++ b/4-Exploratory-data-analysis.qmd
@@ -270,7 +270,7 @@ Categorical variables represent discrete groupings, such as labels, names, or bi
 To begin, we examine the distribution of the target variable `churn`, which records whether a customer has left the service. Knowing this distribution is essential for assessing class balance, an important factor in both model performance and interpretability.
 
 ```{r out.width = "50%"}
-ggplot(data = churn, aes(x = churn, label = scales::percent(prop.table(stat(count))))) +
+ggplot(data = churn, aes(x = churn, label = scales::percent(prop.table(after_stat(count))))) +
   geom_bar(fill = c("#F4A582", "#A8D5BA")) + 
   geom_text(stat = 'count', vjust = 0.4, size = 8)
 ```
@@ -420,7 +420,7 @@ ggplot(data = churn) +
   labs(x = "Churn", y = "Daytime Minutes")
 
 ggplot(data = churn) +
-  geom_density(aes(x = day.mins, fill = churn), alpha = 0.5) +
+  geom_density(aes(x = day.mins, fill = churn)) +
   labs(x = "Daytime Minutes", y = "Density", fill = "Churn")
 ```
 
@@ -445,7 +445,7 @@ ggplot(data = churn, aes(x = churn, y = eve.mins)) +
   labs(x = "Churn", y = "Evening Minutes")
 
 ggplot(data = churn) +
-  geom_density(aes(x = eve.mins, fill = churn), alpha = 0.5) +
+  geom_density(aes(x = eve.mins, fill = churn)) +
   labs(x = "Evening Minutes", y = "Density", fill = "Churn")
 ```
 
@@ -459,11 +459,12 @@ We now apply the same approach to `night.mins`:
 #| fig-height: 4
 
 ggplot(data = churn) +
-  geom_boxplot(aes(x = churn, y = night.mins), fill = c("#F4A582", "#A8D5BA")) +
+  geom_boxplot(aes(x = churn, y = night.mins), 
+               fill = c("#F4A582", "#A8D5BA")) +
   labs(x = "Churn", y = "Nighttime Minutes")
 
 ggplot(data = churn) +
-  geom_density(aes(x = night.mins, fill = churn), alpha = 0.5) +
+  geom_density(aes(x = night.mins, fill = churn)) +
   labs(x = "Nighttime Minutes", y = "Density", fill = "Churn")
 ```
 
@@ -488,7 +489,7 @@ ggplot(data = churn) +
   labs(x = "Churn", y = "International Calls")
 
 ggplot(data = churn) +
-  geom_density(aes(x = intl.calls, fill = churn), alpha = 0.5) +
+  geom_density(aes(x = intl.calls, fill = churn)) +
   labs(x = "International Calls", y = "Density", fill = "Churn")
 ```
 
@@ -577,7 +578,7 @@ To quantify this finding, we isolate this high-usage group using the `subset()` 
 ```{r out.width = "50%"}
 sub_churn = subset(churn, (day.mins > 400 - 0.6 * eve.mins))
 
-ggplot(data = sub_churn, aes(x = churn, label = scales::percent(prop.table(stat(count))))) +
+ggplot(data = sub_churn, aes(x = churn, label = scales::percent(prop.table(after_stat(count))))) +
     geom_bar(fill = c("#F4A582", "#A8D5BA")) + 
     geom_text(stat = 'count', vjust = 0.4, size = 8)
 ```
