--- a/5-Statistics.qmd
+++ b/5-Statistics.qmd
@@ -359,7 +359,7 @@ ggplot(data = churn) +
   )
 
 ggplot(data = churn) +
-  geom_density(aes(x = intl.calls, fill = churn), alpha = 0.5) +
+  geom_density(aes(x = intl.calls, fill = churn)) +
   labs(
     #title = "Distribution of International Calls by Churn",
     x = "International Calls",
