--- a/index.qmd
+++ b/index.qmd
@@ -22,7 +22,7 @@ Built around the *Data Science Workflow*, the book guides you through data wrang
 - Unsupervised learning with clustering;  
 - Model evaluation and comparison.
 
-The book also includes the **liver** package, available on [CRAN](https://cran.r-project.org/web/packages/liver/index.html), which provides curated datasets and helper functions to support interactive learning.
+The book also includes the [**liver**](https://CRAN.R-project.org/package=liver) package, available on [CRAN](https://cran.r-project.org/web/packages/liver/index.html), which provides curated datasets and helper functions to support interactive learning.
 
 You can always access the latest version of the book at  
 👉 [https://book-data-science-r.netlify.app](https://book-data-science-r.netlify.app)  
